# kmeans-par

./: .gitignore  README.md  kmeans-par.cabal  shell.nix
benchmark/: Main.lhs
src/Algorithms/Lloyd/: Sequential.lhs  Strategies.lhs
src/Data/Vector/: Split.hs
test/Algorithms/Lloyd/: StrategiesSpec.hs
