name:                kmeans-par
version:             1.5.1
synopsis:            Sequential and parallel implementations of Lloyd's algorithm.
license:             MIT
license-file:        LICENSE
author:              vi
maintainer:          me@vikramverma.com
category:            Algorithm
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Algorithms.Lloyd.Sequential,
    Algorithms.Lloyd.Strategies,
    Data.Metric
  other-modules:
    Control.Applicative.Extras,
    Data.Functor.Extras,
    Data.Vector.Split
  other-extensions:
    ViewPatterns 
  build-depends:
    base == 4.*,
    vector,
    semigroups,
    parallel
  hs-source-dirs:
    src
  ghc-options:
    -O2
  default-language:
    Haskell2010

benchmark kmeans-benchmark
  type:
    exitcode-stdio-1.0
  main-is:
    Main.lhs
  hs-source-dirs:
    benchmark
  build-depends:
    base == 4.*,
    random,
    criterion,
    normaldistribution,
    kmeans-par,
    deepseq,
    vector
  ghc-options:
    -threaded -O2 -with-rtsopts=-N -rtsopts
  default-language:
    Haskell2010

test-suite spec
  type: 
    exitcode-stdio-1.0
  hs-source-dirs:
    test,src
  main-is:
    Spec.hs
  build-depends:
    base == 4.*,
    hspec >= 1.5,
    normaldistribution,
    parallel,
    semigroups,
    vector,
    QuickCheck
  default-language:
    Haskell2010
  ghc-options:
    -threaded -O2 -with-rtsopts=-N -rtsopts
