name:                kmeans-par
version:             1.5.1
synopsis:            Sequential and parallel implementations of Lloyd's algorithm.
license:             MIT
license-file:        LICENSE
author:              vi
maintainer:          vi <me@vikramverma.com>, Simon Alling <alling.simon@gmail.com>
bug-reports:         https://github.com/SimonAlling/kmeans-par/issues
category:            Algorithm
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/SimonAlling/kmeans-par

library
  exposed-modules:
    Algorithms.Lloyd.Sequential,
    Algorithms.Lloyd.Strategies,
    Data.Metric
  other-modules:
    Control.Applicative.Extras,
    Data.Functor.Extras,
    Data.Vector.Split
  other-extensions:
    ViewPatterns 
  build-depends:
    base == 4.*,
    vector,
    semigroups,
    parallel
  hs-source-dirs:
    src
  ghc-options:
    -O2
    -feager-blackholing
  default-language:
    Haskell2010

benchmark kmeans-benchmark
  type:
    exitcode-stdio-1.0
  main-is:
    Main.lhs
  hs-source-dirs:
    benchmark
  build-depends:
    base == 4.*,
    random,
    criterion,
    normaldistribution,
    kmeans-par,
    optparse-applicative,
    deepseq,
    vector
  ghc-options:
    -threaded -O2 -feager-blackholing -with-rtsopts=-N -rtsopts
  default-language:
    Haskell2010

test-suite spec
  type: 
    exitcode-stdio-1.0
  hs-source-dirs:
    test,src
  main-is:
    Spec.hs
  other-modules:
    Algorithms.Lloyd.Sequential
    Algorithms.Lloyd.SequentialSpec
    Algorithms.Lloyd.Strategies
    Algorithms.Lloyd.StrategiesSpec
    Control.Applicative.Extras
    Data.Functor.Extras
    Data.Metric
    Data.Vector.Split
  build-depends:
    base == 4.*,
    hspec >= 1.5,
    kmeans-par,
    normaldistribution,
    parallel,
    semigroups,
    vector,
    QuickCheck
  default-language:
    Haskell2010
  ghc-options:
    -threaded -O2 -feager-blackholing -with-rtsopts=-N -rtsopts
